frontend/test/should_fail/globalvar_001.grg
using model_init;

::g_a:A;
ref ::g_m:map<string,CC>;

rule rt
{
	modify {
	---
		eval { ::g_m["Foo"] = ::g_a.m["Foo"]; }
	}
}
